--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,13 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <style>
+      footer {
+        text-align: center;
+        padding: 10px; /* 可以根据需要调整底部的内边距 */
+        background-color: #f1f1f1; /* 可选的底部背景色 */
+      }
+    </style>
   </head>
 
   <body>
@@ -28,6 +35,15 @@ layout: compress
     </div>
 
     {% include scripts.html %}
+    <footer>
+      <p>&copy; {{ site.title }} {{ site.time | date: "%Y" }}</p>
+      <p>Sharing of published articles on this website follows the policies provided by: 
+        <a href="https://www.elsevier.com/about/policies-and-standards/sharing" target="_blank" rel="noopener">Elsevier</a> 
+        and 
+        <a href="https://journals.ieeeauthorcenter.ieee.org/become-an-ieee-journal-author/publishing-ethics/guidelines-and-policies/post-publication-policies/" target="_blank" rel="noopener">IEEE</a>.
+    
+      <!-- 添加其他版权信息 -->
+    </footer>
 
   </body>
 </html>
