--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@ layout: compress
     {% include scripts.html %}
     <footer>
       <p>&copy; {{ site.title }} {{ site.time | date: "%Y" }}</p>
-      <p>Sharing of published articles on this website follows the policies provided by: 
+      <p>Sharing of academic papers on this website follows the policies provided by: 
         <a href="https://www.elsevier.com/about/policies-and-standards/sharing" target="_blank" rel="noopener">Elsevier</a> 
         and 
         <a href="https://journals.ieeeauthorcenter.ieee.org/become-an-ieee-journal-author/publishing-ethics/guidelines-and-policies/post-publication-policies/" target="_blank" rel="noopener">IEEE</a>.
