--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,6 +1,6 @@
 <!-- begin SEO -->
 {% if site.url %}
-  {% assign seo_url = site.url %}
+  {% assign seo_url = "https://ac.ppeak.site" %}
 {% endif %}
 {% assign seo_url = seo_url | default: site.github.url %}
 
