--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -3,7 +3,7 @@
   {% assign seo_url = site.url %}
 {% endif %}
 {% assign seo_url = seo_url | default: site.github.url %}-->
-{% assign seo_url = "https://ac.ppeak.site/" %}
+{% assign seo_url = "https://ac.ppeak.site" %}
 {% if site.url %}
   {% assign canonical_url = page.url | replace: "index.html", "" | prepend: site.url %}
 {% endif %}
